--- a/Personal site/index.html
+++ b/Personal site/index.html
@@ -10,7 +10,7 @@
     <!--Create a simple layout-->
     <table cellspacing="20">
         <tr>
-            <td><img src="images/silverado-ev.jpeg" alt="Nicolas Pham profile picture" width="300"></td>
+            <td><img src="Images/profile.jpg" alt="Nicolas Pham profile picture" height="200"></td>
             <td>
                 <h1>Nicolas Pham</h1>
                 <p><em>Stack Web developer.</em></p>
@@ -35,10 +35,15 @@
         <li>Full stack web developer</li>
         <li><strong><a href="https://github.com/NicolasPham/The-Odin-Project">The Odin Project</a></strong></li>
     </ul>
+
+    <hr>
+
     <h3>Hobbies</h3>
     <li>Beer brewing</li>
     <li>Martial Arts</li>
     <li>Motocycles</li>
+
+    <hr>
 
     <h3>Work Experience</h3>
 
@@ -68,26 +73,28 @@
 
     </table>
 
+    <hr>
+
     <h3>Skills</h3>
-    <table>
+    <table cellspacing=10>
         <tr>
             <td>
-                <td>HTML</td>
-                <td>⭐⭐⭐⭐⭐</td>
+            <td>HTML</td>
+            <td>⭐⭐⭐⭐⭐</td>
             </td>
             <td>
-                <td>Javascript</td>
-                <td>⭐⭐⭐⭐</td>
+            <td>Javascript</td>
+            <td>⭐⭐⭐⭐</td>
             </td>
         </tr>
         <tr>
             <td>
-                <td>CSS</td>
-                <td>⭐⭐⭐⭐⭐</td>
+            <td>CSS</td>
+            <td>⭐⭐⭐⭐⭐</td>
             </td>
             <td>
-                <td>ReactJs</td>
-                <td>⭐⭐⭐⭐</td>
+            <td>ReactJs</td>
+            <td>⭐⭐⭐⭐</td>
             </td>
         </tr>
     </table>
