Update personal site

--- a/Personal site/index.html
+++ b/Personal site/index.html
@@ -100,7 +100,7 @@
     </table>
 
     <hr>
-    <p><a href="pages/contact.html">Contact me</a></p>
+    <p><a href="pages/about.html">About me</a></p>
 </body>
 
 </html>
