--- a/Projects/TinDog-Start-master/index.html
+++ b/Projects/TinDog-Start-master/index.html
@@ -3,60 +3,128 @@
 
 <head>
   <meta charset="utf-8">
+
+  <!--meta name tag for proper responsve behaviour in mobile device-->
+  <meta name="viewport" content="width=device-width, intial scale =1">
   <title>TinDog</title>
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="../TinDog-Start-master/css/styles.css">
+
+  <!--Adding font awesome-->
+  <script src="https://kit.fontawesome.com/e0f89c6ad1.js" crossorigin="anonymous"></script>
+
+  <!--Adding bootstrap into html-->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
+    crossorigin="anonymous"></script>
+
+  <!--Add google fonts - Montserrat-->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400;900&display=swap" rel="stylesheet">
+
+  <!--Add Goole fonts - Ubuntu Regular 400-->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
 </head>
 
 <body>
 
   <section id="title">
+    <!--add container-fluid to the division-->
+    <div class="container-fluid">
 
-    <!-- Nav Bar -->
+      <!-- Nav Bar -->
+      <nav class="navbar navbar-expand-lg navbar-dark">
+        <a class="navbar-brand" id="brand-name" href=" ">tindog</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
 
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav ms-auto">
+            <li class="navbar-item"><a class="nav-link" href="">Contact</a></li>
+            <li class="navbar-item"><a class="nav-link" href="">Pricing</a></li>
+            <li class="navbar-item"><a class="nav-link" href="">Download</a></li>
+          </ul>
+        </div>
+      </nav>
 
+      <!-- Title -->
 
-
-    <!-- Title -->
-
-    <div>
-      <h1>Meet new and interesting dogs nearby.</h1>
-      <button type="button">Download</button>
-      <button type="button">Download</button>
+      <div class="row">
+        <div class="col-lg-6">
+          <h1><strong>Meet new and interesting dogs nearby.</strong></h1>
+          <button type="button" class="btn btn-dark btn-lg"><i class="fa-brands fa-apple"></i> Download</button>
+          <button type="button" class="btn btn-outline-light btn-lg"><i class="fa-brands fa-google-play"></i>
+            Download</button>
+        </div>
+        <div class="col-lg-6">
+          <img class="img-title" src="images/iphone6.png" alt="iphone-mockup">
+        </div>
+      </div>
     </div>
-    <div>
-      <img src="images/iphone6.png" alt="iphone-mockup">
-    </div>
-
   </section>
 
 
   <!-- Features -->
 
   <section id="features">
+    <div class="row container features">
+      <div class="col-lg-4 section2-item">
+        <i class="fa-solid fa-circle-check fa-4x font-awesome"></i><br>
+        <h3>Easy to use.</h3>
+        <p class="p-section2">So easy to use, even your dog could do it.</p>
+      </div>
 
-    <h3>Easy to use.</h3>
-    <p>So easy to use, even your dog could do it.</p>
+      <div class="col-lg-4 section2-item">
+        <i class="fa-solid fa-bullseye fa-4x font-awesome"></i><br>
+        <h3>Elite Clientele</h3>
+        <p class="p-section2">We have all the dogs, the greatest dogs.</p>
+      </div>
 
-    <h3>Elite Clientele</h3>
-    <p>We have all the dogs, the greatest dogs.</p>
+      <div class="col-lg-4 section2-item">
+        <i class="fa-solid fa-heart fa-4x font-awesome"></i><br>
+        <h3>Guaranteed to work.</h3>
+        <p class="p-section2">Find the love of your dog's life or your money back.</p>
+      </div>
 
-    <h3>Guaranteed to work.</h3>
-    <p>Find the love of your dog's life or your money back.</p>
-
+    </div>
   </section>
 
 
   <!-- Testimonials -->
 
-  <section id="testimonials">
+  <section id="testimonials" class="carousel slide" data-bs-ride="carousel">
+    <div class="carousel-inner">
 
-    <h2>I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof.</h2>
-    <img src="images/dog-img.jpg" alt="dog-profile">
-    <em>Pebbles, New York</em>
+      <div class="carousel-item active">
+        <h2>I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof.</h2>
+        <img class="img-testimonials" src="images/dog-img.jpg" alt="dog-profile">
+        <em>Pebbles, New York</em>
+      </div>
 
-    <!-- <h2 class="testimonial-text">My dog used to be so lonely, but with TinDog's help, they've found the love of their life. I think.</h2>
-    <img class="testimonial-image" src="images/lady-img.jpg" alt="lady-profile">
-    <em>Beverly, Illinois</em> -->
+      <div class="carousel-item">
+        <h2 class="testimonial-text">My dog used to be so lonely, but with TinDog's help, they've found the love of
+          their
+          life. I think.</h2>
+        <img class="img-testimonials" src="images/lady-img.jpg" alt="lady-profile">
+        <em>Beverly, Illinois</em>
+      </div>
+
+    </div>
+
+    <button class="carousel-control-prev" type="button" data-bs-target="#testimonials" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#testimonials" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
 
   </section>
 
@@ -64,46 +132,73 @@
   <!-- Press -->
 
   <section id="press">
-    <img src="images/techcrunch.png" alt="tc-logo">
-    <img src="images/tnw.png" alt="tnw-logo">
-    <img src="images/bizinsider.png" alt="biz-insider-logo">
-    <img src="images/mashable.png" alt="mashable-logo">
+    <img class="img-press" src="images/techcrunch.png" alt="tc-logo">
+    <img class="img-press" src="images/tnw.png" alt="tnw-logo">
+    <img class="img-press" src="images/bizinsider.png" alt="biz-insider-logo">
+    <img class="img-press" src="images/mashable.png" alt="mashable-logo">
 
   </section>
 
 
   <!-- Pricing -->
 
-  <section id="pricing">
+  <section id="pricing" class="container text-center">
 
     <h2>A Plan for Every Dog's Needs</h2>
     <p>Simple and affordable price plans for your and your dog.</p>
 
+    <div class="row">
+      <div class="col-lg-4 col-md-6 pricing">
+        <div class="card">
+          <div class="card-header">
+            <h2>Chihuahua</h2>
+          </div>
+          <div class="card-body">
+            <h2>Free</h2>
+            <p>5 Matches Per Day</p>
+            <p>10 Messages Per Day</p>
+            <p>Unlimited App Usage</p>
+            <button type="button" class="btn btn-outline-dark btn-block">Sign Up</button>
 
-    <h3>Chihuahua</h3>
-    <h2>Free</h2>
-    <p>5 Matches Per Day</p>
-    <p>10 Messages Per Day</p>
-    <p>Unlimited App Usage</p>
-    <button type="button">Sign Up</button>
+          </div>
+        </div>
+      </div>
 
 
-    <h3>Labrador</h3>
-    <h2>$49 / mo</h2>
-    <p>Unlimited Matches</p>
-    <p>Unlimited Messages</p>
-    <p>Unlimited App Usage</p>
-    <button type="button">Sign Up</button>
+      <div class="col-lg-4 col-md-6 pricing">
+        <div class="card">
+          <div class="card-header">
+            <h3>Labrador</h3>
+          </div>
+          <div class="card-body">
+            <h2>$49 / mo</h2>
+            <p>Unlimited Matches</p>
+            <p>Unlimited Messages</p>
+            <p>Unlimited App Usage</p>
+            <button type="button" class="btn btn-dark btn-block">Sign Up</button>
+          </div>
+        </div>
+      </div>
 
 
-    <h3>Mastiff</h3>
-    <h2>$99 / mo</h2>
-    <p>Pirority Listing</p>
-    <p>Unlimited Matches</p>
-    <p>Unlimited Messages</p>
-    <p>Unlimited App Usage</p>
-    <button type="button">Sign Up</button>
+      <div class="col-lg-4 col-md-12 pricing">
+        <div class="card">
+          <div class="card-header">
+            <h3>Mastiff</h3>
+          </div>
 
+          <div class="card-body">
+            <h2>$99 / mo</h2>
+            <p>Pirority Listing</p>
+            <p>Unlimited Matches</p>
+            <p>Unlimited Messages</p>
+            <p>Unlimited App Usage</p>
+            <button type="button" class="btn btn-dark btn-block">Sign Up</button>
+          </div>
+        </div>
+      </div>
+
+    </div>
   </section>
 
 
@@ -111,9 +206,9 @@
 
   <section id="cta">
 
-    <h3>Find the True Love of Your Dog's Life Today.</h3>
-    <button type="button">Download</button>
-    <button type="button">Download</button>
+    <h3 class="h3-cta">Find the True Love of Your Dog's Life Today.</h3>
+    <button type="button" class="btn btn-dark btn-lg"><i class="fa-brands fa-apple"></i> Download</button>
+    <button type="button" class="btn btn-light btn-lg"><i class="fa-brands fa-google-play"></i> Download</button>
 
   </section>
 
@@ -122,6 +217,10 @@
 
   <footer id="footer">
 
+    <a class="contact-footer" href=""><i class="fa-brands fa-twitter"></i></a>
+    <a class="contact-footer" href=""><i class="fa-brands fa-facebook-f "></i></a>
+    <a class="contact-footer" href=""><i class="fa-brands fa-instagram"></i></a>
+    <a class="contact-footer" href=""><i class="fa-solid fa-envelope"></i></a>
     <p>© Copyright TinDog</p>
 
   </footer>
